# REMODEL

./: .gitignore
Coding_practice/: first  first.c
Geometry_to_graph/: MPI_distribute.py  MPI_distribute_complex_graph.py  MPI_test.py  NACA_step.step  complex_graph_creation.py  cube.step  graph_creation.py  make_cube.py  partitioned_wing.vtk  to_vtk.py
WP1_NURBS_Partition/: CMakeLists.txt  main.f90  nurbsPartition_JH.f90
WP1_NURBS_Partition/data/: NACA_complex_file.stp  oneSurface.stp
benchmarks/egads_geo_bench/data/: convert_egads_to_stream.cpp  convert_to_stream  cube.egads  cube.egads.stream  cylinder.egads  cylinder.egads.stream
benchmarks/egads_geo_bench/plotting/: plotting_results.py
benchmarks/egads_geo_bench/src/: a.out  inspect_brep_lite  main  main.cpp  step1  step1_lite  step1_lite_import_topo.cpp  step1_load_topo.cpp  step2  step2_lite_import_topo  step2_lite_import_topo.cpp  step3_lite_tess  step3_lite_tess_sweep.cpp  step3b_lite_tess_cylinder  step3b_lite_tess_cylinder.cpp  step4  step4_lite_inveval  step4_lite_inveval_batch.cpp  step4b_lite_inveval_cylinder  step4b_lite_inveval_cylinder.cpp
benchmarks/egads_geo_bench/src/main.dSYM/Contents/Resources/DWARF/: main
boostTest/: build_cube.cpp  cube  cube.dot  cube.vtk  cube_pbgl.cpp
